Fix footer horizontal overflow

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ p {
     justify-content: space-between;
     color: #F9FAF8;
     height: 64px;
-    padding: 0px 32px;
+    padding: 0px 320px;
     max-width: 1000px;
     min-width: 700px;
     flex-grow: 1;
@@ -100,7 +100,7 @@ ul {
     align-items: center;
     background-color: #1F2937;
     color: #E5E7EB;
-    padding: 24px;
+    padding: 24px 0px;
     margin-top: auto;
     width: 100%;
 }
